tests/rascal/negative/type_errors/L1/18_expression_ES10_D4_17.ob
MODULE Test18;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               y := x;
               z := 1223;
               z := 200;
               y := 200;
               z := x;
               x := (+ 1223);
               p := (z > 1);
  (* error *)  p := (((- y) MOD 200) <= 2);
               r := (1 = 1223);
               z := 1
END Test18.